--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@ header {
     background: linear-gradient(to right, white 50%, cyan 60%, magenta 70%, yellow 80%, black 90%)  
 }
 
-nav {
-    
-}
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -31,16 +27,132 @@ li a {
     padding: 16px;
 }
 
-section {
-    display: flex; 
+.container {
+    padding: 2rem;
+    display: flex;
+    
+}
+
+.slider-wrapper {
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
+}
+
+.slider {
+    display: flex;
+    aspect-ratio: 16 / 16;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+    overflow: hidden;
+    
+}
+
+.image {
+    position: relative;
+    width: 100%;
+}
+.image img {
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+
+.image h1 {
+    position: absolute;
+    top: 10%;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: xx-large;
+}
+
+.image h1 span {
+    background-color: rgba(2, 2, 4, 0.5);
+    color: whitesmoke;
+    text-shadow: 0.1rem 0.1rem black;
+}
+
+.slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.255rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.slider-nav a {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background-color: #ff0000;
+    box-shadow: 0.1rem 0.1rem 1rem 1rem #ffffff;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover {
+    opacity: 1;
+}
+
+.about-pp {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: x-large;
+    text-align: left;
+    margin: 2rem;
+    width: 30%;
+}
+
+button {
+    background-color: rgb(235, 80, 72);
+    justify-self: center;
+    padding: rem;
+    color: #000000;
+    font-size: 2rem;
+    border-radius: 2rem;
+    border: none;
+}
+
+.products {
+    display: grid;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: xx-large;
+}
+
+.products img {
+    width: 15rem;
+}
+/*section {
+    background-image: url('resources/fon-oboi.jpg');
+    width: 100%;
+    height: 400px;
+    margin: 0;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+section img {
+    height: 10%;
+    width: 10%;
 }
 
 section div {
     display: inline-grid;
     font-size: larger;
 }
-/*header nav div {
-    display: flex;
-}
+    */
 
+footer {
+    text-align: center;
+    background-color: #ff0000;
+    color: white;
+    padding: 1rem;
+    position: absolute;
+    width: 100%;
+}
     
